<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntryActivity">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout2"
        style="?attr/attr_entry_constraintlayout_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="?attr/attr_border_with_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <LinearLayout
            android:id="@+id/linearlayout1"
            style="?attr/attr_entry_item_linearlayout_style"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout2">

            <TextView
                android:id="@+id/textView"
                style="?attr/attr_entry_textview_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/entryactivity_textview_height_title" />

            <EditText
                android:id="@+id/editText"
                style="?attr/attr_entry_edit_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout2"
            style="?attr/attr_entry_item_linearlayout_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/linearlayout1"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout1">

            <TextView
                android:id="@+id/textView2"
                style="?attr/attr_entry_textview_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/entryactivity_textview_weight_title" />

            <EditText
                android:id="@+id/editText2"
                style="?attr/attr_entry_edit_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout3"
            style="?attr/attr_entry_item_linearlayout_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/linearlayout2"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout2">

            <TextView
                android:id="@+id/textView3"
                style="?attr/attr_entry_textview_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/entryactivity_textview_measure_title" />

            <EditText
                android:id="@+id/editText3"
                style="?attr/attr_entry_edit_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:ems="10"
                android:inputType="date" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearlayout4"
            style="?attr/attr_entry_item_linearlayout_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/linearlayout3"
            app:layout_constraintTop_toBottomOf="@+id/linearlayout3">

            <TextView
                android:id="@+id/textView4"
                style="?attr/attr_entry_textview_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:text="@string/entryactivity_textview_gender_title" />

            <LinearLayout
                style="?attr/attr_entry_switch_linearlayout_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:orientation="horizontal">

                <Switch
                    android:id="@+id/switch1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="switchClick"
                    android:text="@string/entryactivity_male_title" />
            </LinearLayout>

        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        style="?attr/attr_entry_item_linearlayout_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/constraintLayout2"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

        <Button
            android:id="@+id/buttonDetail"
            style="?attr/attr_entry_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/attr_entry_button_press"
            android:onClick="buttonClick"
            android:text="@string/entryactivity_button_detail_title" />

        <Button
            android:id="@+id/buttonSave"
            style="?attr/attr_entry_button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/attr_entry_button_press"
            android:onClick="buttonClick"
            android:text="@string/entryactivity_button_save_title" />
    </LinearLayout>

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent"-->
        <!--android:textSize="20sp"-->
        <!--android:layout_marginLeft="24dp"-->
        <!--android:layout_marginTop="4dp"-->
        <!--android:text="Data Entry"-->
        <!--android:background="#EEEEEE"-->
        <!--/>-->
</android.support.constraint.ConstraintLayout>